<resources>
    <string name="app_name">RickAndMorty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="characters">Characters</string>
    <string name="locations">Locations</string>
    <string name="episodes">Episodes</string>
    <string name="origin">Origin</string>
    <string name="species">Species</string>
    <string name="rick_sanchez">Rick Sanchez</string>
    <string name="character">CHARACTERS</string>
    <string name="dimension">Dimension :</string>
    <string name="planet_type">Planet Type :</string>
    <string name="planet">Planet :</string>
    <string name="type">Type</string>
    <string name="alive">Alive</string>
    <string name="dead">Dead</string>
    <string name="unknown">Unknown</string>
    <string name="Residents">Residents of this Planet…</string>
    <string name="dimensions_static_text">Dimension   -></string>
    <string name="nobody_lives_text">Nobody lives here…</string>
    <string name="menu">Menu</string>
    <string name="change_theme">Change Theme</string>
    <string name="settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="deep_link_example">Deep link to Movie Application</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="favorites">Favorites</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="skip">Skip</string>
    <string name="all">All</string>
    <string name="chucker">Chucker</string>
</resources>