<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Menu">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/characters"
                    android:enabled="true"
                    android:icon="@drawable/rick_sanchez"
                    android:title="@string/characters" />
                <item
                    android:id="@+id/locations"
                    android:enabled="true"
                    android:icon="@drawable/morty_smith"
                    android:title="@string/locations" />
                <item
                    android:id="@+id/episodes"
                    android:enabled="true"
                    android:icon="@drawable/summer_smith"
                    android:title="@string/episodes" />

                <item
                    android:id="@+id/favorites"
                    android:enabled="true"
                    android:icon="@drawable/icon_favorite"
                    android:title="@string/favorites" />
            </group>
        </menu>
    </item>

    <item android:title="Deep Link">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/deepLinkButton"
                    android:icon="@drawable/icon_language"
                    android:title="@string/deep_link_example" />
            </group>
        </menu>
    </item>
    <item android:title="Deep Link">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/chucker"
                    android:icon="@drawable/morty_smith"
                    android:title="@string/chucker" />
            </group>
        </menu>
    </item>
    <item android:title="Change Theme">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/lightMode"
                    android:icon="@drawable/icon_light"
                    android:title="Light Mode" />
                <item
                    android:id="@+id/darkMode"
                    android:icon="@drawable/icon_dark"
                    android:title="Dark Mode" />
            </group>
        </menu>
    </item>


</menu>
